# chessland_puzzler

./: Cargo.toml
benches/: read_pgn.rs
src/: lib.rs  main.rs  pgn.rs  puzzle.rs  stockfish.rs
src/common/: config.rs
src/domain/: mod.rs  pgn.rs  puzzle.rs  stockfish.rs
src/http/: app.rs  error.rs  handler.rs  mod.rs
src/pgn/: mod.rs
src/puzzle/: mod.rs
src/stockfish/: mod.rs
tests/: puzzle_generation_tests.rs
