[package]
name = "chessland_puzzle_generator"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.0"
shakmaty = "0.27.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[profile.performance1]
inherits = "release"
codegen-units = 1

[profile.performance2]
inherits = "release"
codegen-units = 1
lto = "fat"
debug = true

[[bench]]
name = "read_pgn"
harness = false
