[package]
name = "chessland_puzzle_generator"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
dotenvy = "0.15.7"
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3.19"
reqwest = { version = "0.12", features = ["json", "blocking"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
